--- a/html/pravidla.html
+++ b/html/pravidla.html
@@ -1,20 +1,20 @@
 <h1>Pravidla</h1>
 
-<p>Dva lesní skřítkové dostali od svého krále za úkol namíchat lektvary z různých ingrediencí. Skřítkové staví napříč lesem cestičky propojující požadované suroviny, vyhrává ten skřítek, který získá více bodů (lektvary jsou bodovány dle jejich složitosti).</p>
+<p>Čtyři lesní skřítkové dostali od svého krále za úkol namíchat lektvar, každý z jiných ingrediencí. Skřítkové staví napříč lesem cestičky propojující požadované suroviny, vyhrává ten skřítek, který získá více bodů (lektvary jsou bodovány dle jejich složitosti).</p>
 
 <ul>
 	<li>Hraje se kolově, počet kol je omezen</li>
 	<li>Na jednom plánu hrají dva soupeři</li>
-	<li>Hrací pole je čtvercová síť, jednotlivá políčka mají souřadnice od <code>[0,0]</code> (levý horní roh), osa <strong>x</strong> je levo-pravá, osa <strong>y</strong> je shora-dolů</li>
-	<li>Na hracím poli jsou náhodně rozmístěny ingredience na lektvary, na jednom políčku může být více různých surovin a každá surovina může být vícekrát</li>
-	<li>Recepty na lektvary jsou určeny na začátku hry, oba hráči mají stejné</li>
+	<li>Hrací pole je čtvercová síť, jednotlivá políčka mají souřadnice od <code>[0,0]</code> (levý dolní roh), osa <strong>x</strong> je levo-pravá, osa <strong>y</strong> je z dolů-nahoru</li>
+	<li>Na hracím poli jsou rozmístěny ingredience na lektvary, na jednom políčku může být více různých surovin a každá surovina může být vícekrát</li>
+	<li>Každý skřítek musí nejrve sestavit jeden konkrétní lektvar a teprve potom může začít vařit lektvary z kuchařky společné všem skrítkům</li>
 	<li>Propojením surovin daných receptem dojde k namíchání lektvaru a použité suroviny jsou z herního plánu odstraněny</li>
 	<li>První cestička může být postavena na jakémkoliv volném políčku, další musí navazovat na předchozí postavené. Je přípustné napojit svoji soustavu cest na cestičky protivníka</li>
-	<li>Cestičky mohou vést pouze horizontálně a vertikálně</li>
-	<li>Za namíchaný lektvar získá hráč určitý počet bodů daný jeho složitostí</li>
-	<li>Každý hráč může během hry položit 5 kamenů které znemožňují stavbu cestičky a nemohou být odstraněny.</li>
+	<li>Cestičky mohou vést horizontálně, vertikálně i šikmo</li>
+	<li>Za namíchaný lektvar získá hráč určitý počet bodů daný jeho složitostí a uvedený v kuchařce</li>
+	<li>Každý hráč může během hry položit 5 kamenů které znemožňují stavbu cestičky (nebo existuje-li již na daném poli cesta znemožní po ní transport susovin) a nemohou být odstraněny</li>
 	<li>Kámen může být položen na cestičku nebo volné políčko</li>
-	<li>V každém kole se provede:
+	<li>V každém kole se provedou akce v tomto pořadí:
 		<ul>
 			<li>Položení kamenů</li>
 			<li>Vybudování cestiček</li>
