--- a/html/implementace.html
+++ b/html/implementace.html
@@ -77,7 +77,7 @@ C:3;D:3,,D:1,,,,E:1,,E:3;F:3
 <h2>Spuštění</h2>
 <ul>
 	<li>Vyhodnocovací program vyžaduje nainstalován python2.7 (pravděpodobně i nižší, ale netestovali jsme to)</li>
-	<li>Typické spuštění serveru: <code>./redpot.py strategie0/random.sh strategie1/random.sh strategie2/random.sh strategie3/random.sh</code></li>
+	<li>Typické spuštění serveru: <code>./redbot.py strategie0/random.sh strategie1/random.sh strategie2/random.sh strategie3/random.sh</code></li>
 	<li>Záznam hry uloží program do adresáře <code>game</code> ve formátu <code>playfield.txt.kolo</code></li>
 	<li>Grafický záznam hry je možno zobrazit spuštěním <code>./TODO</code></li>
 </ul>
