--- a/html/pravidla.html
+++ b/html/pravidla.html
@@ -7,12 +7,12 @@
 	<li>Na jednom plánu hrají dva soupeři</li>
 	<li>Hrací pole je čtvercová síť, jednotlivá políčka mají souřadnice od <code>[0,0]</code> (levý dolní roh), osa <strong>x</strong> je levo-pravá, osa <strong>y</strong> je z dolů-nahoru</li>
 	<li>Na hracím poli jsou rozmístěny ingredience na lektvary, na jednom políčku může být více různých surovin a každá surovina může být vícekrát</li>
-	<li>Každý skřítek musí nejrve sestavit jeden konkrétní lektvar a teprve potom může začít vařit lektvary z kuchařky společné všem skrítkům</li>
+	<li>Každý skřítek musí nejprve sestavit jeden konkrétní lektvar a teprve potom může začít vařit lektvary z kuchařky společné všem skřítkům</li>
 	<li>Propojením surovin daných receptem dojde k namíchání lektvaru a použité suroviny jsou z herního plánu odstraněny</li>
 	<li>První cestička může být postavena na jakémkoliv volném políčku, další musí navazovat na předchozí postavené. Je přípustné napojit svoji soustavu cest na cestičky protivníka</li>
 	<li>Cestičky mohou vést horizontálně, vertikálně i šikmo</li>
 	<li>Za namíchaný lektvar získá hráč určitý počet bodů daný jeho složitostí a uvedený v kuchařce</li>
-	<li>Každý hráč může během hry položit 5 kamenů které znemožňují stavbu cestičky (nebo existuje-li již na daném poli cesta znemožní po ní transport susovin) a nemohou být odstraněny</li>
+	<li>Každý hráč může během hry položit 5 kamenů které znemožňují stavbu cestičky (nebo existuje-li již na daném poli cesta, znemožní po ní transport surovin) a nemohou být odstraněny</li>
 	<li>Kámen může být položen na cestičku nebo volné políčko</li>
 	<li>V každém kole se provedou akce v tomto pořadí:
 		<ul>
@@ -20,7 +20,7 @@
 			<li>Vybudování cestiček</li>
 			<li>Kontrola propojených surovin a uvaření lektvarů
 				<ul>
-					<li>V případě že o surovinu soupeří oba hráči, je náhodně vybrán hráč který ji získá</li>
+					<li>V případě že o surovinu soupeří více hráčů, je náhodně vybrán hráč, který ji získá</li>
 				</ul>
 			</li>
 			<li>Odstranění použitých surovin z mapy</li>
