html: typos, word order

--- a/html/implementace.html
+++ b/html/implementace.html
@@ -37,7 +37,7 @@ C:3;D:3,,D:1,,,,E:1,,E:3;F:3
 	<li><code>Kamenu: 5</code> udává zbývající počet kamenů</li>
 	<li><code>Hlavni: ABC</code> udává recept na hlavní lektvar který musí hráč sestavit než může sestavovat recepty z kuchařky. Tato řádka chybí pokud již hráč tento lektvar sestavil</li>
 	<li><code>Kuchařka:</code> udává začátek kuchařky bodovaných lektvarů</li>
-	<li><code>RGB 1</code> popisuje recept skládající se z částí R, G a B a že tento lektvar je za jeden bod</li>
+	<li><code>RGB 1</code> popisuje lektvar skládající se z částí R, G a B, tento lektvar je za jeden bod</li>
 	<li><code>Mapa: </code> po tomto návěstí následuje herní plán </li>
 </ul>
 
@@ -53,8 +53,8 @@ C:3;D:3,,D:1,,,,E:1,,E:3;F:3
 	<li>Každá položka se skládá ze svého jednopísmenného názvu a čísla odděleného středníkem, např:
 		<ul>
 			<li><code>A:3</code> políčko obsahuje 3 kusy suroviny A</li>
-			<li><code>|:0</code> na políčku je cestička spojující vrchol nahořed od políčka a dole od políčka postavená strategií 0</li>
-			<li><code>\:1;#:3</code> políčko obsahuje cestičku postavenou strategií 1, která ale byla zablokovaná kamenem pooženým strategií 3</li>
+			<li><code>|:0</code> na políčku je cestička postavená strategií 0 spojující vrchol nahoře a dole od políčka</li>
+			<li><code>\:1;#:3</code> políčko obsahuje cestičku postavenou strategií 1, která ale byla zablokovaná kamenem položeným strategií 3</li>
 		</ul>
 	</li>
 	<li>Vyskytovat se mohou pouze:
