--- a/html/pravidla.html
+++ b/html/pravidla.html
@@ -4,7 +4,7 @@
 
 <ul>
 	<li>Hraje se kolově, počet kol je omezen</li>
-	<li>Na jednom plánu hrají dva soupeři</li>
+	<li>Na jednom plánu hrají čtyři soupeři</li>
 	<li>Hrací pole je čtvercová síť, jednotlivá políčka mají souřadnice od <code>[0,0]</code> (levý dolní roh), osa <strong>x</strong> je levo-pravá, osa <strong>y</strong> je z dolů-nahoru</li>
 	<li>Na hracím poli jsou rozmístěny ingredience na lektvary, na jednom políčku může být více různých surovin a každá surovina může být vícekrát</li>
 	<li>Každý skřítek musí nejprve sestavit jeden konkrétní lektvar a teprve potom může začít vařit lektvary z kuchařky společné všem skřítkům</li>
