All potions in the cookbook have same value

--- a/html/implementace.html
+++ b/html/implementace.html
@@ -16,9 +16,9 @@ Kolo: 123
 Kamenu: 5
 Hlavni: ABC
 Kucharka:
-RGB 1
-AEE 2
-EADO 3
+RGB
+AEE
+EAD
 Mapa:
 A:3;B:3,-:1,A:1,,,,H:1,-:0,G:3;H:3
 ,,,,,@:2,-:0,,
@@ -36,8 +36,8 @@ C:3;D:3,,D:1,,,,E:1,,E:3;F:3
 	<li><code>Kolo: 123</code> udává aktuální kolo</li>
 	<li><code>Kamenu: 5</code> udává zbývající počet kamenů</li>
 	<li><code>Hlavni: ABC</code> udává recept na hlavní lektvar který musí hráč sestavit než může sestavovat recepty z kuchařky. Tato řádka chybí pokud již hráč tento lektvar sestavil</li>
-	<li><code>Kuchařka:</code> udává začátek kuchařky bodovaných lektvarů</li>
-	<li><code>RGB 1</code> popisuje lektvar skládající se z částí R, G a B, tento lektvar je za jeden bod</li>
+	<li><code>Kuchařka:</code> udává začátek kuchařky lektvarů</li>
+	<li><code>RGB</code> popisuje lektvar skládající se z částí R, G a B</li>
 	<li><code>Mapa: </code> po tomto návěstí následuje herní plán </li>
 </ul>
 
