--- a/html/pravidla.html
+++ b/html/pravidla.html
@@ -1,6 +1,6 @@
 <h1>Pravidla</h1>
 
-<p>Čtyři lesní skřítkové dostali od svého krále za úkol namíchat lektvar, každý z jiných ingrediencí. Skřítkové staví napříč lesem cestičky propojující požadované suroviny, vyhrává ten skřítek, který získá více bodů (lektvary jsou bodovány dle jejich složitosti).</p>
+<p>Čtyři lesní skřítkové dostali od svého krále za úkol namíchat lektvar, každý z jiných ingrediencí. Skřítkové staví napříč lesem cestičky propojující požadované suroviny, vyhrává ten skřítek, který získá více bodů (uvaří nejvíce lektvarů).</p>
 
 <ul>
 	<li>Hraje se kolově, počet kol je omezen</li>
@@ -11,7 +11,7 @@
 	<li>Propojením surovin daných receptem dojde k namíchání lektvaru a použité suroviny jsou z herního plánu odstraněny</li>
 	<li>První cestička může být postavena na jakémkoliv volném políčku, další musí navazovat na předchozí postavené. Je přípustné napojit svoji soustavu cest na cestičky protivníka</li>
 	<li>Cestičky mohou vést horizontálně, vertikálně i šikmo</li>
-	<li>Za namíchaný lektvar získá hráč určitý počet bodů daný jeho složitostí a uvedený v kuchařce</li>
+	<li>Za namíchaný lektvar uvedený v kuchařce získá hráč bod</li>
 	<li>Každý hráč může během hry položit 5 kamenů které znemožňují stavbu cestičky (nebo existuje-li již na daném poli cesta, znemožní po ní transport surovin) a nemohou být odstraněny</li>
 	<li>Kámen může být položen na cestičku nebo volné políčko</li>
 	<li>V každém kole se provedou akce v tomto pořadí:
