Fix max number of rounds to some sufficient but not too big number

--- a/html/pravidla.html
+++ b/html/pravidla.html
@@ -26,6 +26,6 @@
 			<li>Odstranění použitých surovin z mapy</li>
 		</ul>
 	</li>
-	<li>Hraje se na daný počet kol (1000) a dokud jsou na mapě suroviny</li>
+	<li>Hraje se na daný počet kol (2 * šířka mapy + 2 * výška mapy) a dokud jsou na mapě suroviny</li>
 	<li>Vyhrává hráč který má na konci více bodů za uvařené lektvary</li>
 </ul>
